--- a/Frontend/resources/assets/css/style.css
+++ b/Frontend/resources/assets/css/style.css
@@ -24880,3 +24880,7 @@ div.dtk-focus-alt table.dataTable tbody th.focus {
 .ant-flex {
     height: unset !important;
 }
+
+.ant-card-body {
+    padding-top: 10px !important;
+}
