commit before first demo

--- a/Frontend/resources/assets/css/style.css
+++ b/Frontend/resources/assets/css/style.css
@@ -22181,7 +22181,7 @@ pre[class*=language-]:before {
     top: 0;
     margin-left: 0;
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 50px);
     transition: allm-header 0.3s ease-in-out;
 }
 
