fix: change filter in monitor page

--- a/Frontend/resources/views/monitor/Monitor.css
+++ b/Frontend/resources/views/monitor/Monitor.css
@@ -39,3 +39,11 @@ input:-ms-input-placeholder {
     color: #a0a0a0;
     opacity: 1;
 }
+
+.ant-select-selector {
+    border-radius: 0 !important;
+}
+
+button {
+    border-radius: 0 !important;
+}
