feat: feature for button view pulse

--- a/Frontend/resources/views/monitor/Monitor.css
+++ b/Frontend/resources/views/monitor/Monitor.css
@@ -44,6 +44,6 @@ input:-ms-input-placeholder {
     border-radius: 0 !important;
 }
 
-button {
+.button-form {
     border-radius: 0 !important;
 }
