--- a/Frontend/resources/assets/css/style.css
+++ b/Frontend/resources/assets/css/style.css
@@ -22249,8 +22249,6 @@ pre[class*=language-]:before {
     }
 
     .pcoded-header .m-header {
-        display: flex;
-        justify-content: center;
         align-items: center;
         width: 100%;
         height: 50px;
@@ -22274,7 +22272,7 @@ pre[class*=language-]:before {
     }
 
     .pcoded-navbar {
-        margin-left: -230px;
+        /*margin-left: -230px;*/
         position: absolute;
         height: calc(100% - 50px);
     }
